Fixed errors, app now runs
Fixed post trail and new user methods.
Amended swagger file for new trail and new users
Amended models to be in line with the model structure from the powerpoint
Fixed authentication.py to fetch the list of users and what role they have in each trail
Amended app.py and home.html so I can see the JSON for trails, users and locations
